--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Homebrewing, Brewing, Beer">
+    <meta name="description" content="Homebrewing recipe creation and browsing">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>BrewBros</title>
     <link rel="icon" href="src/assets/Crown.png">
